[build-system]
build-backend = "setuptools.build_meta"
requires = ["Cython", "setuptools>=40.6.0", "wheel"]

[project]
authors = [
  {name = "Joséphine Wolf Oberholtzer", email = "josephine.wolf.oberholtzer@gmail.com"}
]
classifiers = [
  "Framework :: AsyncIO",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: MacOS",
  "Operating System :: POSIX",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Artistic Software",
  "Topic :: Multimedia :: Sound/Audio",
  "Topic :: Multimedia :: Sound/Audio :: Analysis",
  "Topic :: Multimedia :: Sound/Audio :: Sound Synthesis",
]
dependencies = [
  "platformdirs >= 4.0.0",
  "psutil",
  "uqbar >= 0.7.3",
]
description = "A Python API for SuperCollider"
dynamic = ["version"]
keywords = ["audio", "dsp", "music composition", "scsynth", "supercollider", "synthesis"]
license = {text = "MIT"}
name = "supriya"
readme = "README.md"
requires-python = ">= 3.10"

[project.optional-dependencies]
docs = [
  "jupyterlab",
  "jupyterlab-rise",
  "librosa",
  "matplotlib",
  "mypy",
  "soxr",
  "sphinx",
  "sphinx-immaterial",
  "sphinxext-opengraph",
  "standard-aifc; python_version >= '3.13'",  # aifc removed in 3.13
  "standard-sunau; python_version >= '3.13'",  # sunau removed in 3.13
]
test = [
  "jupyterlab",
  "librosa",
  "lxml",
  "matplotlib",
  "mypy >= 1.8.0",
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
  "pytest-lazy-fixtures",
  "pytest-mock",
  "pytest-rerunfailures",
  "ruff",
  "setuptools; python_version >= '3.12'",
  "standard-aifc; python_version >= '3.13'",  # aifc removed in 3.13
  "standard-sunau; python_version >= '3.13'",  # sunau removed in 3.13
  "types-PyYAML",
  "types-docutils",
]

[project.urls]
homepage = "https://github.com/supriya-project/supriya"
documentation = "https://supriya-project.github.io/supriya"
repository = "https://github.com/supriya-project/supriya"

[tool.cibuildwheel]
build = "cp310-* cp311-* cp312-* cp313-*"
test-command = [
  # Only double-quotes work on Windows.
  'python -c "from supriya.contexts import shm; print(shm.__file__)"',
  'python -c "from supriya.utils._intervals import IntervalTreeDriverEx"',
]

[tool.coverage.report]
exclude_lines = [
  "if TYPE_CHECKING:",
  "pragma: no cover",
  "raise NotImplementedError",
]

[tool.mypy]
ignore_missing_imports = true
plugins = [
    "supriya.ext.mypy",
]

[tool.pytest.ini_options]
addopts = [
  "--cov-branch",
  "--cov-report=html",
  "--cov-report=term",
  "--doctest-modules",
  "-rf",
  "-vv",
]
asyncio_default_fixture_loop_scope = "function"
doctest_optionflags = [
  "ELLIPSIS"
]
log_format = "%(asctime)s.%(msecs)03d %(name)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
markers = [
  "sphinx: mark a test as a Sphinx test."
]
testpaths = [
  "tests",
  "supriya",
]

[tool.ruff]
extend-include = ["*.ipynb"]
line-length = 88

[tool.setuptools.package-data]
supriya = ["*.pxd", "*.pyx"]
