[build-system]
build-backend = "setuptools.build_meta"
requires = ["cython", "setuptools>=40.6.0", "wheel"]

[project]
authors = [
  {name = "Joséphine Wolf Oberholtzer", email = "josephine.wolf.oberholtzer@gmail.com"}
]
classifiers = [
  "Framework :: AsyncIO",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Operating System :: MacOS",
  "Operating System :: POSIX",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Artistic Software",
  "Topic :: Multimedia :: Sound/Audio",
  "Topic :: Multimedia :: Sound/Audio :: Analysis",
  "Topic :: Multimedia :: Sound/Audio :: Sound Synthesis",
]
dependencies = [
  "audioread",
  "backports.strenum; python_version < '3.11'",
  "platformdirs >= 4.0.0",
  "psutil",
  "uqbar >= 0.9.6",
]
description = "A Python API for SuperCollider"
dynamic = ["version"]
keywords = ["audio", "dsp", "music composition", "scsynth", "supercollider", "synthesis"]
license = "MIT"
name = "supriya"
readme = "README.md"
requires-python = ">= 3.10"

[project.optional-dependencies]
docs = [
  "jupyterlab",
  "jupyterlab-rise",
  "matplotlib",
  "mypy",
  "sphinx",
  "sphinx-immaterial",
  "sphinx-toolbox",
  "sphinxext-opengraph",
  "supriya[examples]",
]
examples = [
  "pynput",
  "python-rtmidi",
]
test = [
  "IPython",
  "lxml",
  "matplotlib",
  "mypy",
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
  "pytest-lazy-fixtures",
  "pytest-mock",
  "pytest-rerunfailures",
  "ruff",
  "types-PyYAML",
  "types-docutils",
  "types-psutil",
  "types-pynput",
]

[project.urls]
homepage = "https://github.com/supriya-project/supriya"
documentation = "https://supriya-project.github.io/supriya"
repository = "https://github.com/supriya-project/supriya"

[tool.cibuildwheel]
build = "cp3{10,11,12,13,14}-*"
test-command = [
  # Only double-quotes work on Windows.
  'python -c "from supriya.contexts import shm; print(shm.__file__)"',
]

[tool.coverage.report]
exclude_lines = [
  "if TYPE_CHECKING:",
  "pragma: no cover",
  "raise NotImplementedError",
]

[tool.mypy]
ignore_missing_imports = true
plugins = ["supriya.ext.mypy"]

[tool.pytest.ini_options]
addopts = [
  "--cov-branch",
  "--cov-report=html",
  "--cov-report=term",
  "--doctest-modules",
  "-rf",
  "-vv",
]
asyncio_default_fixture_loop_scope = "function"
doctest_optionflags = [
  "ELLIPSIS"
]
log_format = "%(asctime)s.%(msecs)03d %(name)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
markers = [
  "sphinx: mark a test as a Sphinx test."
]
testpaths = [
  "tests",
  "src",
]

[tool.ruff]
extend-include = ["*.ipynb"]
line-length = 88
# always the oldest python version supriya supports
target-version = "py310"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
supriya = ["*.pxd", "*.pyx", "py.typed"]

[[tool.setuptools.ext-modules]]
include-dirs = ["vendor/", "vendor/supercollider/common/", "vendor/TLSF-2.4.6/src/"]
language = "c++"
name = "supriya.contexts.shm"
sources = ["src/supriya/contexts/shm.pyx"]
